--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "feedblock",
+  "name": "fitty",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.14.0",
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
     "react": "^18",
